# nemo-extensions

nemo-dropbox/: configure.ac
nemo-fileroller/src/: nemo-fileroller.c
nemo-python/: meson.build
nemo-python/src/: nemo-python-object.c  nemo-python.c
nemo-terminal/debian/: control
